# ProjDeleivery

./: Dockerfile  docker-compose.yml
kapi-master/: .gitignore  .isort.cfg  Dockerfile  Procfile  README.md  alembic.ini  app.py  auth.py  main.py  pyproject.toml  requirements.txt  test_postgres_connection.py
kapi-master/.envs/: dev.yaml  staging.yaml
kapi-master/alembic/: env.py
kapi-master/cli/: change_matches.py  change_weights_athletes.py  copy_semi_finals.py  copy_tournaments.py  create_athlete.py  create_fake_competition.py  create_insure_entity_to_athletes.py  create_insure_entity_to_teams.py  delete_athlete.py  delete_athletes_duplicated.py  delete_competition.py  delete_duplicate_insurances.py  delete_podiums.py  fill_third_places_contact.py  find_duplicate_athletes.py  fix_federation_numbers.py  fix_insured_entities.py  fplk_db.csv  get_duplicate_matches.py  get_pass_hash.py  import_athletes.py  init_db.py  merge_athletes.py  merge_inscriptions.py  name_matches_excel.py  numerate_matches_specific.py  recreate_all_forms.py  resolve_matches.py  see_incriptions_gender.py  tchange_belts.py  tests.py
kapi-master/constants/: belts.json  categories.json  category_types.json  insurance_groups.json  insurance_types.json  insurance_types_notes.json  insured_types.json  roles.py  users.json
kapi-master/core/: environment.py  file_creation.py  file_storage.py  file_validator.py  get_podium.py  jwt_tokens.py  mail.py  tournaments_utils.py  utils.py
kapi-master/crud/: __init__.py  base.py  crud_address.py  crud_athlete.py  crud_athlete_competition.py  crud_belt.py  (+19 more)
(+291 files in other folders)
